--- a/index.html
+++ b/index.html
@@ -1761,8 +1761,8 @@ if(DESCRIPTION.trim()==""||DESCRIPTION.trim==null){
   return null
 }
 
-// const url="https://quinkcontentcreation.herokuapp.com/content/form"
-const url="http://localhost:5000/content/form"
+const url="https://quinkcontentcreation.herokuapp.com/content/form"
+// const url="http://localhost:5000/content/form"
 
 
 fetch(url, {
